--- a/First_Page.html
+++ b/First_Page.html
@@ -2,8 +2,11 @@
 <html lang="en">
 
 <head>
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8726830375989227"
      crossorigin="anonymous"></script>
+
+<meta name="google-adsense-account" content="ca-pub-8726830375989227">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
