--- a/First_Page.html
+++ b/First_Page.html
@@ -7,7 +7,8 @@
      crossorigin="anonymous"></script>
 
 <meta name="google-adsense-account" content="ca-pub-8726830375989227">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8726830375989227"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
