--- a/First_Page.html
+++ b/First_Page.html
@@ -3,6 +3,8 @@
 
 <head>
 
+google.com, pub-8726830375989227, DIRECT, f08c47fec0942fa0
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8726830375989227"
      crossorigin="anonymous"></script>
 
